--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -8,6 +8,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.208.86.5;
 allow 103.251.167.10;
@@ -46,7 +47,6 @@ allow 107.174.231.197;
 allow 107.189.10.175;
 allow 107.189.11.111;
 allow 107.189.1.160;
-allow 107.189.1.175;
 allow 107.189.11.80;
 allow 107.189.1.198;
 allow 107.189.12.3;
@@ -218,6 +218,7 @@ allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
 allow 178.236.247.122;
+allow 178.31.151.36;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -995,9 +996,7 @@ allow 23.154.177.6;
 allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
-allow 23.155.24.6;
 allow 23.155.8.104;
-allow 23.23.127.167;
 allow 23.236.122.62;
 allow 23.26.133.239;
 allow 23.94.211.25;
@@ -1017,14 +1016,13 @@ allow 2.58.56.90;
 allow 2.58.95.31;
 allow 2.58.95.35;
 allow 2.58.95.38;
-allow 2600:3c00:e000:4ee::2;
+allow 2600:3c00:e000:4ee::1;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
-allow 2600:3c03:e000:fa::2;
+allow 2600:3c03:e000:fa::1;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2602:2e5::104;
-allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::14;
 allow 2602:fc24:12:759::1;
 allow 2602:fc24:12:77c0::1;
@@ -1118,7 +1116,6 @@ allow 2605:6400:30:f763::2;
 allow 2605:6400:30:f78b::2;
 allow 2605:6400:30:f7c0:8511:b113:ca11:9baa;
 allow 2605:6400:30:f7ca::2;
-allow 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
 allow 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 allow 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
 allow 2605:6400:30:f858:2704:73e1:7085:12ef;
@@ -1238,6 +1235,8 @@ allow 2620:7:6001::ffff:c759:e658;
 allow 2620:7:6001::ffff:c759:e659;
 allow 27.255.75.198;
 allow 2800:ba0:6:c1::4858;
+allow 2a00:1169:119:b120::;
+allow 2a00:1169:11f:d680::;
 allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
 allow 2a00:1728:3f::c0cc:80;
@@ -1363,6 +1362,7 @@ allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
 allow 2a05:b0c7:67b0::1;
+allow 2a05:b0c7:67bb::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6841::1;
 allow 2a05:b0c7:6949::1;
@@ -1633,6 +1633,7 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.98.139;
 allow 31.42.185.134;
+allow 34.226.32.82;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 37.1.201.144;
@@ -1822,7 +1823,6 @@ allow 77.91.85.147;
 allow 77.91.86.95;
 allow 77.91.87.79;
 allow 78.142.18.219;
-allow 79.102.176.71;
 allow 79.124.8.241;
 allow 79.137.198.213;
 allow 80.210.78.252;
@@ -1921,6 +1921,7 @@ allow 91.219.239.166;
 allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.119.126.163;
+allow 92.205.129.119;
 allow 92.243.24.163;
 allow 92.246.138.145;
 allow 92.246.84.133;
@@ -1943,6 +1944,7 @@ allow 94.103.124.121;
 allow 94.103.124.46;
 allow 94.103.124.90;
 allow 94.103.124.91;
+allow 94.103.124.98;
 allow 94.140.115.63;
 allow 94.142.241.194;
 allow 94.142.244.16;
@@ -1969,4 +1971,5 @@ allow 95.164.46.204;
 allow 95.168.173.143;
 allow 95.211.210.103;
 allow 95.211.244.28;
+allow 96.42.26.63;
 allow 98.128.173.33;
