--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -111,6 +111,7 @@ allow 109.70.100.68;
 allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
+allow 118.163.74.160;
 allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
@@ -153,7 +154,6 @@ allow 152.89.233.169;
 allow 154.16.116.61;
 allow 158.179.215.241;
 allow 160.119.249.240;
-allow 161.35.129.51;
 allow 162.247.72.192;
 allow 162.247.72.199;
 allow 162.247.74.200;
@@ -558,6 +558,7 @@ allow 188.68.52.231;
 allow 190.103.179.98;
 allow 190.120.229.98;
 allow 190.211.254.97;
+allow 191.252.220.31;
 allow 191.96.165.34;
 allow 192.210.255.181;
 allow 192.42.116.14;
@@ -703,7 +704,6 @@ allow 2001:1b60:3:221:4134:101:0:1;
 allow 2001:1b60:3:239:1003:103:0:1;
 allow 2001:1b60:3:239:1003:106:0:1;
 allow 200.122.181.2;
-allow 2001:40e8:0:f090::100;
 allow 2001:41d0:1008:20d1::1;
 allow 2001:41d0:2:9161::1;
 allow 2001:41d0:304:200::9dce;
@@ -813,6 +813,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:9b1:c300:3044::610;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
@@ -1231,8 +1232,6 @@ allow 2620:7:6001::ffff:c759:e658;
 allow 2620:7:6001::ffff:c759:e659;
 allow 27.255.75.198;
 allow 2800:ba0:6:c1::4858;
-allow 2a00:1169:119:b120::;
-allow 2a00:1169:11f:d680::;
 allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
 allow 2a00:1728:3f::c0cc:80;
@@ -1283,6 +1282,7 @@ allow 2a03:4000:29:8a9:887f:9eff:feed:9e9;
 allow 2a03:4000:2b:66e:dead:beef:ca1f:1337;
 allow 2a03:4000:37:3:e842:2ff:feb9:c49c;
 allow 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
+allow 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
 allow 2a03:4000:55:efb::1003;
 allow 2a03:4000:55:efb::a;
 allow 2a03:4000:5:65b:388a:15ff:fedc:30d6;
@@ -1341,7 +1341,6 @@ allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:104:fe02::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:82c0::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:4b9e::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1628,8 +1627,8 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.98.139;
 allow 31.42.185.134;
-allow 34.203.180.54;
 allow 35.0.127.52;
+allow 35.168.182.167;
 allow 35.240.241.135;
 allow 37.1.201.144;
 allow 37.120.166.23;
@@ -1646,6 +1645,7 @@ allow 37.48.70.156;
 allow 38.97.116.244;
 allow 45.12.3.80;
 allow 45.128.232.151;
+allow 45.132.246.245;
 allow 45.134.173.197;
 allow 45.134.225.36;
 allow 45.135.132.20;
@@ -1741,7 +1741,6 @@ allow 5.196.95.34;
 allow 5.255.100.126;
 allow 5.255.100.219;
 allow 5.255.100.224;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.190;
 allow 5.255.103.235;
@@ -1888,7 +1887,6 @@ allow 89.149.37.83;
 allow 89.185.85.140;
 allow 89.187.143.31;
 allow 89.234.157.254;
-allow 89.236.112.100;
 allow 89.58.18.210;
 allow 89.58.26.216;
 allow 89.58.41.156;
@@ -1914,7 +1912,6 @@ allow 91.219.239.166;
 allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.119.126.163;
-allow 92.205.129.119;
 allow 92.243.24.163;
 allow 92.246.138.145;
 allow 92.246.84.133;
