--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,3 +1,4 @@
+allow 100.27.172.227;
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 102.130.127.117;
@@ -210,6 +211,7 @@ allow 178.175.142.26;
 allow 178.175.148.209;
 allow 178.20.55.16;
 allow 178.20.55.182;
+allow 178.208.90.162;
 allow 178.218.144.18;
 allow 178.218.144.51;
 allow 178.218.144.64;
@@ -949,6 +951,7 @@ allow 209.141.62.71;
 allow 210.223.41.36;
 allow 212.73.134.204;
 allow 212.95.50.77;
+allow 212.95.52.76;
 allow 213.252.140.118;
 allow 213.95.149.22;
 allow 216.239.90.19;
@@ -995,7 +998,6 @@ allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.26.133.239;
 allow 23.94.211.25;
-allow 23.94.36.142;
 allow 2400:8904::f03c:93ff:fe68:23b3;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
@@ -1031,7 +1033,6 @@ allow 2602:fc24:19:95b7::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
 allow 2602:fef9:100:1100::199;
-allow 2603:3:610a:5050::;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
 allow 2604:b480:3:6::2;
@@ -1341,6 +1342,7 @@ allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:104:fe02::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:82c0::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:4b9e::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1628,7 +1630,6 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.98.139;
 allow 31.42.185.134;
-allow 3.220.21.244;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 37.1.201.144;
@@ -1742,6 +1743,7 @@ allow 5.196.95.34;
 allow 5.255.100.126;
 allow 5.255.100.219;
 allow 5.255.100.224;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.190;
 allow 5.255.103.235;
@@ -1794,7 +1796,6 @@ allow 66.220.242.222;
 allow 67.219.109.141;
 allow 71.19.144.106;
 allow 72.14.179.10;
-allow 72.167.47.69;
 allow 72.211.49.235;
 allow 72.5.43.211;
 allow 74.82.47.194;
@@ -1819,7 +1820,6 @@ allow 77.91.87.79;
 allow 78.142.18.219;
 allow 79.124.8.241;
 allow 79.137.198.213;
-allow 79.50.224.220;
 allow 80.210.78.252;
 allow 80.241.60.207;
 allow 80.67.167.81;
@@ -1858,7 +1858,6 @@ allow 84.38.134.238;
 allow 84.38.134.239;
 allow 84.38.134.240;
 allow 84.38.134.241;
-allow 84.38.187.151;
 allow 84.54.51.61;
 allow 84.54.51.68;
 allow 84.54.51.69;
