--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -1,3 +1,4 @@
+set_real_ip_from 100.27.172.227;
 set_real_ip_from 102.130.113.9;
 set_real_ip_from 102.130.117.167;
 set_real_ip_from 102.130.127.117;
@@ -210,6 +211,7 @@ set_real_ip_from 178.175.142.26;
 set_real_ip_from 178.175.148.209;
 set_real_ip_from 178.20.55.16;
 set_real_ip_from 178.20.55.182;
+set_real_ip_from 178.208.90.162;
 set_real_ip_from 178.218.144.18;
 set_real_ip_from 178.218.144.51;
 set_real_ip_from 178.218.144.64;
@@ -949,6 +951,7 @@ set_real_ip_from 209.141.62.71;
 set_real_ip_from 210.223.41.36;
 set_real_ip_from 212.73.134.204;
 set_real_ip_from 212.95.50.77;
+set_real_ip_from 212.95.52.76;
 set_real_ip_from 213.252.140.118;
 set_real_ip_from 213.95.149.22;
 set_real_ip_from 216.239.90.19;
@@ -995,7 +998,6 @@ set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.236.122.62;
 set_real_ip_from 23.26.133.239;
 set_real_ip_from 23.94.211.25;
-set_real_ip_from 23.94.36.142;
 set_real_ip_from 2400:8904::f03c:93ff:fe68:23b3;
 set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 set_real_ip_from 2402:1f00:8000:239::;
@@ -1031,7 +1033,6 @@ set_real_ip_from 2602:fc24:19:95b7::1;
 set_real_ip_from 2602:fccf:310:1::a;
 set_real_ip_from 2602:fccf:310:1::b;
 set_real_ip_from 2602:fef9:100:1100::199;
-set_real_ip_from 2603:3:610a:5050::;
 set_real_ip_from 2604:2dc0:202:300::ed3;
 set_real_ip_from 2604:6600:0:42::2;
 set_real_ip_from 2604:b480:3:6::2;
@@ -1341,6 +1342,7 @@ set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:104:fe02::1;
 set_real_ip_from 2a04:52c0:105:78fc::1;
 set_real_ip_from 2a04:52c0:105:82c0::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394::1;
 set_real_ip_from 2a04:52c0:108:4b9e::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1628,7 +1630,6 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.98.139;
 set_real_ip_from 31.42.185.134;
-set_real_ip_from 3.220.21.244;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 35.240.241.135;
 set_real_ip_from 37.1.201.144;
@@ -1742,6 +1743,7 @@ set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.126;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.224;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.103.190;
 set_real_ip_from 5.255.103.235;
@@ -1794,7 +1796,6 @@ set_real_ip_from 66.220.242.222;
 set_real_ip_from 67.219.109.141;
 set_real_ip_from 71.19.144.106;
 set_real_ip_from 72.14.179.10;
-set_real_ip_from 72.167.47.69;
 set_real_ip_from 72.211.49.235;
 set_real_ip_from 72.5.43.211;
 set_real_ip_from 74.82.47.194;
@@ -1819,7 +1820,6 @@ set_real_ip_from 77.91.87.79;
 set_real_ip_from 78.142.18.219;
 set_real_ip_from 79.124.8.241;
 set_real_ip_from 79.137.198.213;
-set_real_ip_from 79.50.224.220;
 set_real_ip_from 80.210.78.252;
 set_real_ip_from 80.241.60.207;
 set_real_ip_from 80.67.167.81;
@@ -1858,7 +1858,6 @@ set_real_ip_from 84.38.134.238;
 set_real_ip_from 84.38.134.239;
 set_real_ip_from 84.38.134.240;
 set_real_ip_from 84.38.134.241;
-set_real_ip_from 84.38.187.151;
 set_real_ip_from 84.54.51.61;
 set_real_ip_from 84.54.51.68;
 set_real_ip_from 84.54.51.69;
