--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -152,7 +152,6 @@ allow 152.89.233.169;
 allow 154.16.116.61;
 allow 158.179.215.241;
 allow 160.119.249.240;
-allow 161.35.129.51;
 allow 162.247.72.192;
 allow 162.247.72.199;
 allow 162.247.74.200;
@@ -278,6 +277,7 @@ allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
+allow 185.174.136.114;
 allow 185.181.60.135;
 allow 185.181.61.115;
 allow 185.181.61.142;
@@ -287,7 +287,6 @@ allow 185.183.159.40;
 allow 185.191.204.254;
 allow 185.193.158.134;
 allow 185.193.52.180;
-allow 185.193.66.127;
 allow 185.195.71.10;
 allow 185.195.71.11;
 allow 185.195.71.12;
@@ -992,6 +991,7 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
+allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.26.133.239;
 allow 23.94.211.25;
@@ -1016,6 +1016,7 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::1;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
+allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::14;
 allow 2602:fc24:12:759::1;
@@ -1641,7 +1642,6 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
-allow 44.221.0.55;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.132.246.245;
@@ -1768,6 +1768,7 @@ allow 5.255.99.5;
 allow 5.2.67.226;
 allow 5.2.79.190;
 allow 5.34.182.203;
+allow 54.198.50.40;
 allow 5.42.66.6;
 allow 5.42.80.232;
 allow 5.42.80.233;
