--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -1,4 +1,3 @@
-set_real_ip_from 100.27.179.183;
 set_real_ip_from 102.130.113.9;
 set_real_ip_from 102.130.117.167;
 set_real_ip_from 102.130.127.117;
@@ -194,7 +193,6 @@ set_real_ip_from 173.249.57.253;
 set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.126.253.190;
 set_real_ip_from 176.58.100.98;
-set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.97.114.202;
 set_real_ip_from 178.162.209.56;
 set_real_ip_from 178.17.170.23;
@@ -213,7 +211,6 @@ set_real_ip_from 178.218.144.64;
 set_real_ip_from 178.218.144.96;
 set_real_ip_from 178.218.144.99;
 set_real_ip_from 178.236.247.122;
-set_real_ip_from 178.31.11.140;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.159.194;
 set_real_ip_from 179.43.159.195;
@@ -675,12 +672,17 @@ set_real_ip_from 198.98.48.20;
 set_real_ip_from 198.98.48.31;
 set_real_ip_from 198.98.48.33;
 set_real_ip_from 198.98.50.199;
+set_real_ip_from 198.98.50.215;
 set_real_ip_from 198.98.51.189;
 set_real_ip_from 198.98.51.249;
+set_real_ip_from 198.98.51.52;
 set_real_ip_from 198.98.53.136;
 set_real_ip_from 198.98.54.49;
 set_real_ip_from 198.98.60.90;
+set_real_ip_from 199.195.248.184;
 set_real_ip_from 199.195.250.165;
+set_real_ip_from 199.195.250.18;
+set_real_ip_from 199.195.250.46;
 set_real_ip_from 199.195.251.119;
 set_real_ip_from 199.195.251.148;
 set_real_ip_from 199.195.251.78;
@@ -689,7 +691,6 @@ set_real_ip_from 199.195.253.156;
 set_real_ip_from 199.195.253.180;
 set_real_ip_from 199.195.253.247;
 set_real_ip_from 2001:1af8:4700:a114:6::1;
-set_real_ip_from 2001:1b60:2:1:3935:104:0:1;
 set_real_ip_from 2001:1b60:3:221:3132:102:0:1;
 set_real_ip_from 2001:1b60:3:221:4134:101:0:1;
 set_real_ip_from 2001:1b60:3:239:1003:103:0:1;
@@ -1005,7 +1006,6 @@ set_real_ip_from 2.58.95.31;
 set_real_ip_from 2.58.95.35;
 set_real_ip_from 2.58.95.38;
 set_real_ip_from 2600:3c00:e000:4ee::3;
-set_real_ip_from 2600:3c00::f03c:91ff:fe73:f9ba;
 set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c03:e000:fa::3;
 set_real_ip_from 2600:3c03::f03c:91ff:fe24:47be;
@@ -1034,7 +1034,12 @@ set_real_ip_from 2605:6400:10:1362::2;
 set_real_ip_from 2605:6400:10:16e:e9da:a184:bfe1:e727;
 set_real_ip_from 2605:6400:10:1ab:2605:6400:10:1ab;
 set_real_ip_from 2605:6400:10:3f9:116c:94a1:a862:dfec;
+set_real_ip_from 2605:6400:10:3f9:2fb4:3d9c:a1bc:73a3;
+set_real_ip_from 2605:6400:10:3f9:42af:65de:583f:49f1;
+set_real_ip_from 2605:6400:10:3f9:8fca:7115:49b6:57fd;
 set_real_ip_from 2605:6400:10:3f9:b9ce:43e8:7a59:6f17;
+set_real_ip_from 2605:6400:10:3f9:bf6e:ca88:3193:7de8;
+set_real_ip_from 2605:6400:10:3f9:f741:57f7:8f88:b2bd;
 set_real_ip_from 2605:6400:10:44f::1;
 set_real_ip_from 2605:6400:10:4ed:1:1:1:1;
 set_real_ip_from 2605:6400:10:58f:8768:8283:1a62:bdc6;
@@ -1243,7 +1248,6 @@ set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7a7:2:3c19:216:3cff:fed7:d6b7;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
-set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a01:7e03::f03c:94ff:fe7d:8250;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:2970:1001::4b;
@@ -1606,6 +1610,7 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.98.139;
 set_real_ip_from 31.42.185.134;
+set_real_ip_from 3.227.192.24;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 35.240.241.135;
 set_real_ip_from 37.1.201.144;
@@ -1827,7 +1832,6 @@ set_real_ip_from 85.17.9.83;
 set_real_ip_from 85.215.76.62;
 set_real_ip_from 85.239.60.173;
 set_real_ip_from 85.93.218.204;
-set_real_ip_from 87.118.110.27;
 set_real_ip_from 87.118.116.103;
 set_real_ip_from 87.118.116.90;
 set_real_ip_from 87.118.122.30;
